--- a/src/assets/css/sass/_base.scss
+++ b/src/assets/css/sass/_base.scss
@@ -7,7 +7,10 @@
  * 1. Correct the line height in all browsers.
  * 2. Prevent adjustments of font size after orientation changes in iOS.
  */
+*{
+  box-sizing: border-box;
 
+}
  ul, li { padding:0px; margin:0px;}
  html {
     line-height: 1.15; /* 1 */
