--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -1,22 +1,23 @@
-@import "./normalize.scss";
+@use 'base';
+@use 'abstracts' as *;
+@use 'controle_aula/controle_aula.scss';
 
-$primary-color: #0064ff;
-$secondary-color: #ed1860;
-$border-color: #ddd;
+//Components
+//Controle Aula
+//Gerador Contrato
 
 a {
   cursor: pointer;
 }
 body {
   background: #fafafa;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-family: $font-stack;
 }
 header {
-  background: #333;
+  background: #222;
   width: 100%;
   #header_center {
-  height: 55px;
+    height: 55px;
 
     display: flex;
     justify-content: space-between;
@@ -33,21 +34,24 @@ header {
       }
     }
     nav {
-      
       ul li {
         display: inline;
 
         a {
-padding:13px 15px;
+          padding: 13px 15px;
           color: #fafafa;
-          height:auto;
+          height: auto;
           font-size: 14px;
           &:hover {
             color: lighten($primary-color, 30%);
-            border-bottom:4px solid lighten($primary-color, 20%);
+            border-bottom: 4px solid lighten($primary-color, 20%);
           }
         }
       }
     }
   }
+}
+
+.components{
+  padding:0px 40px;
 }
