--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -1,3 +1,4 @@
+
 <div class="components" id="controle_aula">
   <h1>Controle de Aula</h1>
   <div class="page_content">
@@ -22,12 +23,175 @@
           <li><a>Inglês Básico</a></li>
         </ul>
       </nav>
-      <div id='bimestres'>
+      <div id="bg_bimestres">
+        <h1>Bimestre 1</h1>
+        <div id="bimestre_1" class="bimestres">
 
-      </div><!--bimestres-->
-    </div><!--bg_curos-->
+          <div class="columns">
+            <div id="b1_aula_4" class="aulas aula_feita open_aula">
+              <span class='open_close_aulas'></span>
+              <p>Aula: 1 - Folders e Pastas</p>
+              <div class='aula_data'>
+              <p>Data: 25/02/2021</p>
+              </div>
+              <div class='aula_detalhes'>
+              <p>
+                Detalhes: As pastas são usadas para organizar tudo que está
+                dentro do computador. As pastas também podem ser chamadas de
+                diretórios, mas hoje em dia este termo é muito pouco usado. É
+                nelas que você organiza seus documentos, vídeos, fotos e etc.
+                nelas que você organiza seus documentos, vídeos, fotos e 
+                etc.  nelas que você organiza seus documentos, vídeos,
+                 fotos e etc.  nelas que você organiza seus documentos,
+                  vídeos, fotos e etc.  nelas que você organiza seus 
+                  documentos, vídeos, fotos e etc asdf asdf as  asfasff 
+                  asdf asdf sfsfd asf sf sf sfd
+              </p>
+              </div>
+            </div>
+            <!--aulas-->
+            <div id="b1_aula_3" class="aulas aula_feita">Aula 3</div>
+            <!--aulas-->
+            <div id="b1_aula_2" class="aulas aula_feita">Aula 2</div>
+            <!--aulas-->
+            <div id="b1_aula_1" class="aulas aula_feita ">
+              <p>Aula: 1 - Folders e Pastas</p>
+              <div class='aula_data'>
+              <p>Data: 25/02/2021</p>
+              </div>
+              <div class='aula_detalhes'>
+              <p>
+                Detalhes: As pastas são usadas para organizar tudo que está
+                dentro do computador. As pastas também podem ser chamadas de
+                diretórios, mas hoje em dia este termo é muito pouco usado. É
+                nelas que você organiza seus documentos, vídeos, fotos e etc.
+                nelas que você organiza seus documentos, vídeos, fotos e etc.  nelas que você organiza seus documentos, vídeos, fotos e etc.  nelas que você organiza seus documentos, vídeos, fotos e etc.  nelas que você organiza seus documentos, vídeos, fotos e etc.
+              </p>
+            </div>
+            </div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_8" class="aulas aula_feita">
+              Aula 8
+              <p>
+                Detalhes: As pastas são usadas para organizar tudo que está
+                dentro do computador. As pastas também podem ser chamadas de
+                diretórios, mas hoje em dia este termo é muito pouco usado. É
+                nelas que você organiza seus documentos, vídeos, fotos e etc.
+              </p></div>
+            <!--aulas-->
+            <div id="b1_aula_7" class="aulas aula_feita">Aula 7</div>
+            <!--aulas-->
+            <div id="b1_aula_6" class="aulas aula_feita">Aula 6</div>
+            <!--aulas-->
+            <div id="b1_aula_5" class="aulas aula_feita">Aula 5</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_12" class="aulas aula_feita">Aula 12</div>
+            <!--aulas-->
+            <div id="b1_aula_11" class="aulas aula_feita">Aula 11</div>
+            <!--aulas-->
+            <div id="b1_aula_10" class="aulas aula_feita">Aula 10</div>
+            <!--aulas-->
+            <div id="b1_aula_9" class="aulas aula_feita">Aula 9</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_16" class="aulas aula_feita">Aula 16</div>
+            <!--aulas-->
+            <div id="b1_aula_15" class="aulas aula_feita">Aula 15</div>
+            <!--aulas-->
+            <div id="b1_aula_14" class="aulas aula_feita">Aula 14</div>
+            <!--aulas-->
+            <div id="b1_aula_13" class="aulas aula_feita">Aula 13</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+        </div>
+        <!--bimestres-->
+
+        <div id="bimestre_2" class="bimestres">
+
+          <div class="columns">
+            <div id="b1_aula_4" class="aulas aula_feita">Aula 4</div>
+            <!--aulas-->
+            <div id="b1_aula_3" class="aulas aula_feita">Aula 3</div>
+            <!--aulas-->
+            <div id="b1_aula_2" class="aulas aula_feita">Aula 2</div>
+            <!--aulas-->
+            <div id="b1_aula_1" class="aulas aula_feita">
+              <p>Aula: 1 - Folders e Pastas</p>
+              <p>Data: 25/02/2021</p>
+              <p>
+                Detalhes: As pastas são usadas para organizar tudo que está
+                dentro do computador. As pastas também podem ser chamadas de
+                diretórios, mas hoje em dia este termo é muito pouco usado. É
+                nelas que você organiza seus documentos, vídeos, fotos e etc.
+              </p>
+            </div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_8" class="aulas aula_feita">Aula 8</div>
+            <!--aulas-->
+            <div id="b1_aula_7" class="aulas aula_feita">Aula 7</div>
+            <!--aulas-->
+            <div id="b1_aula_6" class="aulas aula_feita">Aula 6</div>
+            <!--aulas-->
+            <div id="b1_aula_5" class="aulas aula_feita">Aula 5</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_12" class="aulas aula_feita">Aula 12</div>
+            <!--aulas-->
+            <div id="b1_aula_11" class="aulas aula_feita">Aula 11</div>
+            <!--aulas-->
+            <div id="b1_aula_10" class="aulas aula_feita">Aula 10</div>
+            <!--aulas-->
+            <div id="b1_aula_9" class="aulas aula_feita">Aula 9</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+
+          <div class="columns">
+            <div id="b1_aula_16" class="aulas aula_feita">Aula 16</div>
+            <!--aulas-->
+            <div id="b1_aula_15" class="aulas aula_feita">Aula 15</div>
+            <!--aulas-->
+            <div id="b1_aula_14" class="aulas aula_feita">Aula 14</div>
+            <!--aulas-->
+            <div id="b1_aula_13" class="aulas aula_feita">Aula 13</div>
+            <!--aulas-->
+          </div>
+          <!--columns-->
+        </div>
+        <!--bimestres-->
+      </div>
+      <!--bg_curos-->
+
+     
+    </div>
+    <!--page_content-->
+    <script>
+      Alert('ok');
+      console.log('ok')
+ 
+    </script>
   </div>
-  <!--page_content-->
+  <!--components-->
+
 </div>
-<!--components-->
-<script src="redern.js"></script>
+
+<script src="./components/controle_aula/index.js"></script>
