--- a/src/assets/css/sass/abstracts/_functions.scss
+++ b/src/assets/css/sass/abstracts/_functions.scss
@@ -12,4 +12,7 @@
 @mixin set-background-text-color($color){
     background: $color;
     color: set-text-color($color);
+    &:hover{
+        background: lighten($color, 5%);
+    }
 }
