--- a/src/assets/css/sass/abstracts/_inputs.scss
+++ b/src/assets/css/sass/abstracts/_inputs.scss
@@ -3,7 +3,7 @@
 
 %inputs{
     
-    border-color: $border-color-default;
+    border-color: $border-color-medium;
     border:1px solid;
     padding:5px; 
     font-family: $font-stack;
