--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -1,4 +1,7 @@
 
+<div id='bg_forms_add'>
+
+</div>
 <div class="components" id="controle_aula">
   <h1>Controle de Aula</h1>
   <div class="page_content">
@@ -10,8 +13,12 @@
             <option value="" disabled>Selectione uma Aluno</option>
           </select>
         </div>
+   
+        <button class="btn-primary" id="btn_add_aluno" type="button">
+          + Aluno
+        </button>
         <button class="btn-primary" id="btn_add_aula" type="button">
-          + Adicionar Aula
+          + Aula
         </button>
       </div>
       <a href="#">Ver Todos</a>
