--- a/src/assets/css/sass/abstracts/_variables.scss
+++ b/src/assets/css/sass/abstracts/_variables.scss
@@ -1,13 +1,26 @@
+//Colors
 $primary-color: #0064ff;
 $secondary-color: #ed1860;
 
+//Text
+$text-color: #444;
+
+//Font
 $font-stack : -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 
+//Title
 $title-color-dark: #333;
 $title-color-light: #f0f0f0; 
 
-$border-color-default: #ddd;
+//Borders
+$border-color-medium: #ccc;
 $border-color-dark: #333;
 $border-color-light: #f0f0f0;
-$border-default: 1px solid $border-color-default;
-$text-color: #444;
+$border-set-default: 1px solid $border-color-medium;
+$border-radius: 3px;
+
+//Padding
+$padding-extra-light : 5px; 
+$padding-light : 10px; 
+$padding-medium : 20px;
+$padding-heavy : 40px;
