--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -7,6 +7,8 @@
  */
 * {
   box-sizing: border-box;
+  margin: 0px;
+  padding: 0px;
 }
 
 ul, li {
@@ -346,26 +348,29 @@ template {
   display: none;
 }
 
-.btn-content, .btn-secondary, .btn-primary {
+.forms input[type=submit], .btn-content, .btn-secondary, .btn-primary {
   display: block;
   border-radius: 5px;
   padding: 8px 20px;
   margin: 5px;
-  border: 1px solid #333;
+  border: 0px;
   cursor: pointer;
-}
-.btn-content:hover, .btn-secondary:hover, .btn-primary:hover {
-  transform: scale(0.99);
 }
 
 .btn-primary {
   background: #0064ff;
   color: #fafafa;
 }
+.btn-primary:hover {
+  background: #1a74ff;
+}
 
 .btn-secondary {
   background: #0064ff;
   color: #fafafa;
+}
+.btn-secondary:hover {
+  background: #1a74ff;
 }
 
 .btn-content {
@@ -373,12 +378,15 @@ template {
   color: #fafafa;
   border-radius: 0px;
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #ccc;
   color: #333;
+}
+.btn-content:hover {
+  background: #1a74ff;
 }
 
 .input-primary {
-  border-color: #ddd;
+  border-color: #ccc;
   border: 1px solid;
   padding: 5px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
@@ -386,6 +394,103 @@ template {
 
 .input-primary {
   color: #444;
+}
+
+dialog {
+  margin: 0 auto;
+  padding: 20px;
+}
+
+#bg_forms_add {
+  overflow: hidden;
+}
+
+.forms {
+  display: flex;
+  flex-wrap: wrap;
+  border-radius: 3px;
+  border-color: #ccc;
+  padding: 20px;
+  max-width: 500px;
+  margin: 20px auto;
+  border: 1px solid #ccc;
+  float: left;
+}
+.forms h3 {
+  flex-basis: 100%;
+  text-align: center;
+  margin-bottom: 10px;
+}
+.forms div {
+  display: flex;
+  padding: 5px;
+  flex-grow: 1;
+  max-width: 100%;
+}
+.forms div label {
+  display: flex;
+  align-items: center;
+  min-width: 85px;
+  background: #f0f0f0;
+  padding: 5px 10px;
+}
+.forms div input, .forms div textarea {
+  width: auto;
+  max-width: 500px;
+  min-width: 100px;
+  flex-shrink: 1;
+  flex-grow: 1;
+  display: block;
+  border: 1px solid #ccc;
+  padding: 5px;
+  color: #444;
+}
+.forms input[type=submit] {
+  background: #0064ff;
+  color: #fafafa;
+  display: block;
+  clear: both;
+  width: 50%;
+  margin: 20px auto;
+}
+.forms input[type=submit]:hover {
+  background: #1a74ff;
+}
+
+#form_add_aula {
+  display: none;
+}
+#form_add_aula #data_hora {
+  display: flex;
+  max-width: 100%;
+}
+#btn_novo_aluno {
+  float: right;
+  flex-basis: 100%;
+  clear: both;
+}
+
+#form_add_aluno {
+  display: none;
+}
+#form_add_aluno div #ra {
+  max-width: 20px;
+  flex-shrink: 1;
+}
+
+#nav_forms_add {
+  padding: 5px;
+  display: flex;
+}
+#nav_forms_add li {
+  list-style: none;
+  margin: 3px;
+}
+#nav_forms_add a {
+  padding: 5px;
+  color: #0064ff;
+  background: #ddd;
+  text-decoration: none;
 }
 
 #controle_aula {
@@ -431,12 +536,12 @@ template {
 #controle_aula #bg_cursos #nav_cursos ul li a {
   padding: 10px 20px;
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #ccc;
   color: #333;
 }
 #controle_aula #bg_cursos #bg_bimestres {
   background: #fff;
-  border: 1px solid #ddd;
+  border: 1px solid #ccc;
   padding: 20px;
   width: 100%;
   min-height: 300px;
