--- a/src/assets/css/sass/abstracts/_forms.scss
+++ b/src/assets/css/sass/abstracts/_forms.scss
@@ -10,6 +10,7 @@ display:flex;
    padding: $padding-medium;
   max-width: 500px;
   margin: 20px auto;
+  background:#fff;
   h3{
     flex-basis:100%;
     text-align: center;
