--- a/src/assets/css/sass/controle_aula/_form_add_aula.scss
+++ b/src/assets/css/sass/controle_aula/_form_add_aula.scss
@@ -11,11 +11,26 @@ dialog{
 .forms{
   @include form_flex;
   border: $border-set-default;
-  float:left;
+  position:fixed;
+  
+  right: 0px; left:0px;
+  top: 30%; 
+  z-index: 2;
+  box-shadow: 0px 1px 2px #666;
+  .close_form{
+right:0px;
+top:0px;
+padding: 5px 10px;
+position:absolute;
+cursor:pointer;
+&:hover{
+  background:#ddd;
+}
+  }
+
 }
 #form_add_aula{
   display:none;
-
     #data_hora{
         display:flex; 
         max-width: 100%;
@@ -28,10 +43,10 @@ dialog{
   float:right;
   flex-basis: 100%;
   clear:both;
-  
+  display:none;
 }
 #form_add_aluno{
-  display:none;
+ display:none;
 
 div{
   #ra{
