--- a/src/components/controle_aula/formAddAula.html
+++ b/src/components/controle_aula/formAddAula.html
@@ -1,29 +1,21 @@
-
-
-  
 <form id='form_add_aluno' class='forms'>
+    <span class='close_form'>X</span>
 <h3 >Adicionar Aluno</h3>
-
-
     <div>
-        <label for='nome' >Nome:</label><input id='nome' type='text'>
-    <label for='ra' >RA:</label><input id='ra' type='text'>
+        <label for='nome' >Nome:</label><input required id='nome' type='text'>
+        <label for='ra' >RA:</label><input  required id='ra' type='text'>
     </div>
-
-    </div>
-    <div><label>Curso:</label><input id='curso' ype='text'></div>
-
+    <div><label>Curso:</label><input required id='curso' ype='text'></div>
     <input type='submit' value='Salvar'/>
 </form>
 
-
 <form id='form_add_aula' class='forms'>
+    <span class='close_form'>X</span>
+
     <h3 >Adicionar Aula</h3>
-    
     
         <div><label for='nome' >Nome:</label><input id='nome' type='text'></div>
         <div><label>Curso:</label><input id='curso' ype='text'></div>
-    
         <div id='data_hora'>
             <label>Data:</label><input id='data' type='date'>
             <label>Horário:</label><input id='horario'>
@@ -34,3 +26,4 @@
         </div>
         <input type='submit' value='Salvar'/>
     </form>
+    
