--- a/src/assets/css/sass/style.scss
+++ b/src/assets/css/sass/style.scss
@@ -6,7 +6,7 @@
 //Controle Aula
 //Gerador Contrato
 
-.block_screen{
+#block_screen{
   width:100%; 
   min-height: 100vh;
   position: absolute;
@@ -26,7 +26,7 @@ body {
   position:relative;
 }
 header {
-  background: #222;
+  background: #051e34;
   width: 100%;
   #header_center {
     height: 55px;
@@ -35,14 +35,17 @@ header {
     justify-content: space-between;
     align-items: center;
     margin: 0px;
-    padding: 0px;
+  padding: 0px $padding-heavy;
+
 
     figure {
-      max-width: 70px;
-      max-height: 60px;
+      width: auto;
+      height: 25px;
+      overflow:hidden;
       display: block;
       img {
         max-width: 100%;
+        max-height: 100%;
       }
     }
     nav {
