--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -350,7 +350,7 @@ template {
 
 .forms input[type=submit], .btn-secondary, .btn-primary {
   display: block;
-  border-radius: 5px;
+  border-radius: 2px;
   padding: 8px 20px;
   margin: 5px;
   border: 0px;
@@ -381,14 +381,10 @@ template {
   box-shadow: inset 0px 1px 3px #003c99;
 }
 
-.input-primary {
-  border-color: #ccc;
-  border: 1px solid;
+inputs, .input-primary {
+  border: 1px solid #ccc;
   padding: 5px;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-
-.input-primary {
   color: #444;
 }
 
@@ -517,7 +513,7 @@ dialog {
   color: #333;
   text-align: left;
   font-size: 20px;
-  color: #0064ff;
+  color: #444;
   width: 100%;
 }
 #controle_aula #form_select_aluno {
@@ -574,13 +570,13 @@ dialog {
   flex-wrap: wrap;
   align-items: flex-start;
   justify-content: space-around;
-  border: 1px solid #f90;
+  border: 1px solid #ccc;
 }
 #controle_aula #bg_cursos #bg_bimestres .bimestres h2 {
   flex-basis: 100%;
   height: 20px;
   font-size: 18px;
-  color: #ed1860;
+  color: #444;
 }
 #controle_aula #bg_cursos #bg_bimestres .bimestres .columns {
   width: 25%;
@@ -627,7 +623,7 @@ dialog {
   user-select: none;
 }
 
-.block_screen {
+#block_screen {
   width: 100%;
   min-height: 100vh;
   position: absolute;
@@ -649,7 +645,7 @@ body {
 }
 
 header {
-  background: #222;
+  background: #051e34;
   width: 100%;
 }
 header #header_center {
@@ -658,15 +654,17 @@ header #header_center {
   justify-content: space-between;
   align-items: center;
   margin: 0px;
-  padding: 0px;
+  padding: 0px 40px;
 }
 header #header_center figure {
-  max-width: 70px;
-  max-height: 60px;
+  width: auto;
+  height: 25px;
+  overflow: hidden;
   display: block;
 }
 header #header_center figure img {
   max-width: 100%;
+  max-height: 100%;
 }
 header #header_center nav ul li {
   display: inline;
