--- a/src/components/controle_aula/index.html
+++ b/src/components/controle_aula/index.html
@@ -24,25 +24,13 @@
       <a href="#">Ver Todos</a>
     </form>
     <div id="bg_cursos">
-      <nav id="nav_cursos">
-        <ul>
-          <li><a>Informática Completo</a></li>
-          <li><a>Inglês Básico</a></li>
-        </ul>
-      </nav>
-      <div id="bg_bimestres">
-
-      </div>
-      <!--bg_curos-->
-
-     
-    </div>
-    <!--page_content-->
-    <script>
-      Alert('ok');
-      console.log('ok')
  
-    </script>
+
+  
+     
+    </div><!--bg_cursos-->
+    <!--page_content-->
+
   </div>
   <!--components-->
 
