--- a/src/assets/css/sass/controle_aula/_controle_aula.scss
+++ b/src/assets/css/sass/controle_aula/_controle_aula.scss
@@ -30,22 +30,30 @@
     }
   }
   #bg_cursos {
-    #nav_cursos {
+  nav.nav_cursos {
       overflow: hidden;
-      padding: 5px;
-      margin-top: 10px;
       ul {
         float: right;
         display: flex;
-        align-items: flex-start;
         justify-content: right;
+        align-items: flex-end;
+       margin: 20px 0px 10px 0px;
         li {
           list-style: none;
+          
           a {
             padding: 10px 20px;
             background: #fff;
             border: $border-set-default;
             color: #333;
+            user-select: none;
+            &:hover{
+              background:#f6f6f6;
+            }
+            &:active{
+              background:#f0f0f0;
+
+            }
           }
         }
       }
@@ -54,6 +62,7 @@
       padding:10px; 
       border:$border-set-default;
       h3{ padding:10px;}
+      display:none;
     }
     .bg_bimestres {
       background: #fff;
